# langchain.cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/plans/: agent-harness-reflection-loop.md  hashed-waddling-scroll.md  improvement-plan.md  magical-bubbling-moler.md  purring-wobbling-spindle.md
config/: app_config_template.xml
docs/: ARCHITECTURE.md
examples/: 01_prompt_basic.cpp  02_chat_http.cpp  03_react_agent.cpp  04_rag.cpp  05_chain_skill.cpp  06_api_server.cpp  07_custom_api.cpp  08_custom_tools_skills.cpp  09_persistent_memory.cpp  10_a2a_agent.cpp  11_rag_pipeline.cpp  12_api_client.cpp  13_harness_usage.cpp  14_config_usage.cpp  15_tool_calling_agent.cpp  16_mcp_client_server.cpp  17_hooks_observability.cpp  18_async_llm.cpp  19_bm25_retriever.cpp  20_window_memory.cpp  21_text_splitter.cpp  22_vectorstore_crud.cpp  23_utilities.cpp  24_multi_agent_workflow.cpp
examples/00_smart_app/: CMakeLists.txt  README.md  app_agent.cpp  app_agent.h  app_config.cpp  app_config.h  app_hooks.cpp  app_hooks.h  app_paths.cpp  app_paths.h  app_rag.cpp  app_rag.h  app_server.cpp  app_server.h  app_tools.cpp  app_tools.h  main.cpp
examples/00_smart_app/config/: app_config.xml  chat_client_config.xml
examples/00_smart_app/data/knowledge/: 01_japanese_tea_ceremony.md  02_nordic_hygge.md  03_mediterranean_diet.md  04_stoic_philosophy.md  05_bonsai_art.md  06_french_cinema.md
examples/00_smart_app/scripts/: start.bat  start.sh  stop.bat  stop.sh
examples/00_smart_app/skills/calculator/: SKILL.md
examples/00_smart_app/skills/greeter/: SKILL.md
examples/00_smart_app/skills/sysinfo/: SKILL.md
examples/00_smart_app/skills/sysinfo/scripts/: run.bat  run.sh
examples/00_smart_app/ui/: CMakeLists.txt  chat_app.cpp  chat_app.h  chat_bubble_view.cpp  chat_bubble_view.h  chat_config.cpp  chat_config.h  main_fltk_chat.cpp  smart_app_client.cpp  smart_app_client.h
include/: langchain.h
include/a2a/: a2a.h  a2a_client.h  a2a_server.h
include/agent/: agent.h  multi_agent.h
include/api/: client.h  server.h
include/document/: base_loader.h  text_loader.h
include/embedding/: embedding.h  llamacpp_embedding.h
include/harness/: harness.h  reflection.h
include/hook/: hook.h
include/llm/: anthropic_llm.h  deepseek_llm.h  gemini_llm.h  groq_llm.h  llamacpp_llm.h  llm.h  ollama_llm.h  openai_common.h  openai_llm.h  qwen_llm.h
include/mcp/: mcp_client.h  mcp_server.h
include/memory/: memory.h
include/prompt/: prompt_template.h
include/retriever/: retriever.h
include/skill/: skill.h  skill_loader.h  skill_registry.h
include/text_splitter/: text_splitter.h
include/tool/: tool.h
include/util/: common.h  compress.h  config.h  eventbus.h  fs.h  logging.h  singleton.h  strings.h  thread_pool.h  time.h  timer.h
include/vectorstore/: vectorstore.h
src/a2a/: a2a.cpp
src/agent/: agent.cpp  multi_agent.cpp
src/api/: client.cpp  server.cpp
src/document/: text_loader.cpp
src/embedding/: embedding.cpp  llamacpp_embedding.cpp
src/harness/: harness.cpp
src/hook/: hook.cpp
src/llm/: anthropic_llm.cpp  deepseek_llm.cpp  gemini_llm.cpp  groq_llm.cpp  llamacpp_llm.cpp  llm.cpp  ollama_llm.cpp  openai_llm.cpp  qwen_llm.cpp
src/mcp/: mcp_client.cpp  mcp_server.cpp
src/memory/: memory.cpp
src/prompt/: prompt_template.cpp
src/retriever/: retriever.cpp
src/skill/: skill.cpp  skill_loader.cpp  skill_registry.cpp
src/text_splitter/: text_splitter.cpp
src/tool/: tool.cpp
src/util/: common.cpp  compress.cpp  config.cpp  eventbus.cpp  fs.cpp  logging.cpp  strings.cpp  thread_pool.cpp  time.cpp  timer.cpp
src/vectorstore/: vectorstore.cpp
tests/: test_a2a.cpp  test_agent.cpp  test_api_client.cpp  test_api_server.cpp  test_async_llm.cpp  test_basic.cpp  test_config.cpp  test_embedding_tool.cpp  test_harness.cpp  test_hook.cpp  test_llamacpp_embedding.cpp  test_mcp_server.cpp  test_memory.cpp  test_multi_agent.cpp  test_multimodal_memory.cpp  test_rag.cpp  test_skill.cpp  test_utils.cpp  test_vectorstore.cpp
